--- a/_config.yml
+++ b/_config.yml
@@ -138,27 +138,27 @@ author:
       icon: "fas fa-fw fa-link"
       url: "link to this site" # OPTIONAL
 
-# Site Footer
+#Site Footer
 footer:
   links:
-    - label: "LinkedIn"
-      icon: "fab fa-fw fa-twitter-square"
-      url: "www.linkedin.com/in/danielle-c-samson"
-    - label: "Facebook"
-      icon: "fab fa-fw fa-facebook-square"
-      # url:
+    - label: "Email"
+      icon: "fas fa-fw fa-envelope-square"
+      url: "danielle.samson@colostate.edu" # OPTIONAL
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
-      # url:
-    - label: "GitLab"
-      icon: "fab fa-fw fa-gitlab"
-      # url:
-    - label: "Bitbucket"
-      icon: "fab fa-fw fa-bitbucket"
-      # url:
-    - label: "Instagram"
-      icon: "fab fa-fw fa-instagram"
-      # url:
+      url: "link to your Github" # OPTIONAL
+    - label: "LinkedIn"
+      icon: "fab fa-fw fa-linkedin"
+      url: "www.linkedin.com/in/danielle-c-samson" # OPTIONAL
+    - label: "ResearchGate"
+      icon: "fab fa-researchgate"
+      url: "link to your ResearchGate" # OPTIONAL
+    - label: "Google Scholar"
+      icon: "fab fa-google"
+      url: "link to your Google Scholar" # OPTIONAL
+    - label: "Website"
+      icon: "fas fa-fw fa-link"
+      url: "link to this site" # OPTIONAL
 
 
 # Reading Files
