--- a/_config.yml
+++ b/_config.yml
@@ -311,16 +311,12 @@ compress_html:
     envs: development
 
 
-# Defaults
 defaults:
-  # _posts
+  # _pages
   - scope:
       path: ""
-      type: posts
+      type: pages
     values:
       layout: single
       author_profile: true
-      read_time: true
-      comments: # true
-      share: true
-      related: true
+      share: #true
