--- a/_config.yml
+++ b/_config.yml
@@ -114,7 +114,7 @@ analytics:
 author:
   name             : "Danielle"
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "I am a scientist!"
+  bio              : "Plant Molecular Biologist"
   location         : "the lab"
 
 
