--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -6,5 +6,5 @@ main:
     url: https://github.com/Colorado-State-University-CMB/CM515-course-2025/tree/main/modules
   - title: "CMB Website"
     url: https://cmb.colostate.edu/
-  - title: "ggplot Project"
+  - title: "Completed Projects"
     url: /ggplot_project/
